hard-gists/1253332/run.log
=== Docker Run Log for 1253332 ===
Started at: Mi 29. Okt 12:02:15 CET 2025

[2025-10-29 12:02:16] START: Running container for 1253332
[2025-10-29 12:02:16] SUCCESS: Container 22b6f429f2c0549892ece377d5a51cb7ae21c556d24fd8ea733a210d1ca1b0ff started for 1253332
=== Container logs for 1253332 ===
  File "/snippet.py", line 77
    print get_current(35.70,139.58)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1253332 ===
[2025-10-29 12:02:18] INFO: Container 22b6f429f2c0549892ece377d5a51cb7ae21c556d24fd8ea733a210d1ca1b0ff has stopped
